fixed the mobile highlighting feature and the cropped images will be converted to png if the original is jpeg

--- a/imageBot/static/styles.css
+++ b/imageBot/static/styles.css
@@ -9,6 +9,7 @@
 	position: absolute;
 	left: 0;
 	top: 0;
+	touch-action: none;
 }
 
 .canvas-bg {
